--- a/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>MDT - Maps Visualizer</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="main.qrc">
+    <normaloff>:/main/logo.gif</normaloff>:/main/logo.gif</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1">
     <property name="spacing">
@@ -82,7 +86,7 @@
               </size>
              </property>
              <property name="currentIndex">
-              <number>2</number>
+              <number>0</number>
              </property>
              <widget class="QWidget" name="generalOptions">
               <property name="accessibleName">
@@ -225,7 +229,7 @@
                           </widget>
                          </item>
                          <item row="0" column="1">
-                          <widget class="QSpinBox" name="spinBox_9"/>
+                          <widget class="QSpinBox" name="general_dimension"/>
                          </item>
                          <item row="1" column="0">
                           <widget class="QLabel" name="label_16">
@@ -235,7 +239,7 @@
                           </widget>
                          </item>
                          <item row="1" column="1">
-                          <widget class="QSpinBox" name="spinBox_10"/>
+                          <widget class="QSpinBox" name="general_slice_index"/>
                          </item>
                          <item row="2" column="0">
                           <widget class="QLabel" name="label_15">
@@ -245,7 +249,7 @@
                           </widget>
                          </item>
                          <item row="2" column="1">
-                          <widget class="QSpinBox" name="spinBox_8"/>
+                          <widget class="QSpinBox" name="general_volume_index"/>
                          </item>
                         </layout>
                        </widget>
@@ -449,7 +453,7 @@
                           </widget>
                          </item>
                          <item row="0" column="1">
-                          <widget class="QComboBox" name="comboBox_3"/>
+                          <widget class="QComboBox" name="general_colormap"/>
                          </item>
                          <item row="1" column="0">
                           <widget class="QLabel" name="label_2">
@@ -459,7 +463,7 @@
                           </widget>
                          </item>
                          <item row="1" column="1">
-                          <widget class="QComboBox" name="comboBox_4"/>
+                          <widget class="QComboBox" name="general_rotate"/>
                          </item>
                         </layout>
                        </widget>
@@ -629,7 +633,7 @@
                           <number>3</number>
                          </property>
                          <item row="0" column="0">
-                          <widget class="QListWidget" name="selectMaps">
+                          <widget class="QListWidget" name="general_map_selection">
                            <property name="sizePolicy">
                             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                              <horstretch>0</horstretch>
@@ -916,7 +920,9 @@
    <header>..widgets</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="main.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionQuit</sender>
