--- a/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>750</height>
+    <height>754</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -141,122 +141,11 @@
                 <number>0</number>
                </property>
                <item row="0" column="0">
-                <widget class="QScrollArea" name="scrollArea_2">
-                 <property name="horizontalScrollBarPolicy">
-                  <enum>Qt::ScrollBarAlwaysOff</enum>
+                <layout class="QGridLayout" name="mapSpecificTabPosition">
+                 <property name="spacing">
+                  <number>0</number>
                  </property>
-                 <property name="widgetResizable">
-                  <bool>true</bool>
-                 </property>
-                 <widget class="QWidget" name="scrollAreaWidgetContents_2">
-                  <property name="geometry">
-                   <rect>
-                    <x>0</x>
-                    <y>0</y>
-                    <width>977</width>
-                    <height>657</height>
-                   </rect>
-                  </property>
-                  <layout class="QGridLayout" name="gridLayout_8" rowstretch="0,0,0,0,0,0,0,0,0">
-                   <property name="leftMargin">
-                    <number>6</number>
-                   </property>
-                   <property name="topMargin">
-                    <number>6</number>
-                   </property>
-                   <property name="rightMargin">
-                    <number>6</number>
-                   </property>
-                   <property name="bottomMargin">
-                    <number>6</number>
-                   </property>
-                   <property name="spacing">
-                    <number>6</number>
-                   </property>
-                   <item row="0" column="0" colspan="3">
-                    <widget class="QComboBox" name="comboBox"/>
-                   </item>
-                   <item row="5" column="2">
-                    <layout class="QHBoxLayout" name="horizontalLayout_2">
-                     <item>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_3"/>
-                     </item>
-                     <item>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_4"/>
-                     </item>
-                    </layout>
-                   </item>
-                   <item row="8" column="0">
-                    <spacer name="verticalSpacer">
-                     <property name="orientation">
-                      <enum>Qt::Vertical</enum>
-                     </property>
-                     <property name="sizeHint" stdset="0">
-                      <size>
-                       <width>20</width>
-                       <height>40</height>
-                      </size>
-                     </property>
-                    </spacer>
-                   </item>
-                   <item row="2" column="2">
-                    <widget class="QLineEdit" name="lineEdit"/>
-                   </item>
-                   <item row="4" column="2">
-                    <layout class="QHBoxLayout" name="horizontalLayout">
-                     <item>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
-                       <property name="specialValueText">
-                        <string/>
-                       </property>
-                      </widget>
-                     </item>
-                     <item>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
-                     </item>
-                    </layout>
-                   </item>
-                   <item row="4" column="0">
-                    <widget class="QLabel" name="label_10">
-                     <property name="text">
-                      <string>Scale:</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="2" column="0">
-                    <widget class="QLabel" name="label_8">
-                     <property name="text">
-                      <string>Title:</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="5" column="0">
-                    <widget class="QLabel" name="label_11">
-                     <property name="text">
-                      <string>Clipping:</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="1" column="0" colspan="3">
-                    <widget class="Line" name="line">
-                     <property name="orientation">
-                      <enum>Qt::Horizontal</enum>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="6" column="0">
-                    <widget class="QLabel" name="label_9">
-                     <property name="text">
-                      <string>Colormap:</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="6" column="2">
-                    <widget class="QComboBox" name="comboBox_2"/>
-                   </item>
-                  </layout>
-                 </widget>
-                </widget>
+                </layout>
                </item>
               </layout>
              </widget>
@@ -266,7 +155,11 @@
               </attribute>
               <layout class="QGridLayout" name="gridLayout_9">
                <item row="0" column="0">
-                <widget class="TextConfigEditor" name="textConfigEdit"/>
+                <layout class="QGridLayout" name="textInfoTabPosition">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
+                </layout>
                </item>
               </layout>
              </widget>
@@ -359,24 +252,8 @@
    </property>
   </action>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>TextConfigEditor</class>
-   <extends>QPlainTextEdit</extends>
-   <header>..widgets</header>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>commandTabs</tabstop>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>doubleSpinBox_2</tabstop>
-  <tabstop>doubleSpinBox</tabstop>
-  <tabstop>doubleSpinBox_3</tabstop>
-  <tabstop>doubleSpinBox_4</tabstop>
-  <tabstop>comboBox_2</tabstop>
-  <tabstop>textConfigEdit</tabstop>
-  <tabstop>comboBox</tabstop>
-  <tabstop>scrollArea_2</tabstop>
  </tabstops>
  <resources>
   <include location="main.qrc"/>
