--- a/mdt/data/qt_designs/maps_visualizer/TabTextual.ui
+++ b/mdt/data/qt_designs/maps_visualizer/TabTextual.ui
@@ -41,6 +41,9 @@
    <header>..widgets</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>textConfigEdit</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
