--- a/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
@@ -128,6 +128,9 @@
            <property name="spacing">
             <number>2</number>
            </property>
+           <property name="topMargin">
+            <number>4</number>
+           </property>
            <property name="bottomMargin">
             <number>4</number>
            </property>
