--- a/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
@@ -30,7 +30,7 @@
     <number>0</number>
    </property>
    <property name="verticalSpacing">
-    <number>8</number>
+    <number>10</number>
    </property>
    <item row="2" column="0">
     <spacer name="verticalSpacer">
@@ -116,64 +116,21 @@
          <property name="verticalSpacing">
           <number>3</number>
          </property>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="label_23">
            <property name="text">
             <string>Clipping:</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
-          <layout class="QVBoxLayout" name="verticalLayout">
-           <property name="spacing">
-            <number>2</number>
-           </property>
-           <property name="topMargin">
-            <number>4</number>
-           </property>
-           <property name="bottomMargin">
-            <number>4</number>
-           </property>
-           <item>
-            <widget class="ScientificDoubleSpinBox" name="data_scale_max">
-             <property name="minimum">
-              <double>-9999999999.989999771118164</double>
-             </property>
-             <property name="maximum">
-              <double>9999999999.989999771118164</double>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="ScientificDoubleSpinBox" name="data_scale_min">
-             <property name="specialValueText">
-              <string/>
-             </property>
-             <property name="minimum">
-              <double>-9999999999.989999771118164</double>
-             </property>
-             <property name="maximum">
-              <double>9999999999.989999771118164</double>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QCheckBox" name="data_set_use_scale">
-             <property name="text">
-              <string>Use scaling</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="3" column="0">
+         <item row="4" column="0">
           <widget class="QLabel" name="label_9">
            <property name="text">
             <string>Colormap:</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
+         <item row="4" column="1">
           <widget class="QComboBox" name="colormap"/>
          </item>
          <item row="0" column="1">
@@ -186,15 +143,12 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <layout class="QVBoxLayout" name="verticalLayout_2">
-           <property name="spacing">
-            <number>2</number>
-           </property>
+         <item row="3" column="1">
+          <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,0" columnminimumwidth="0,0">
            <property name="bottomMargin">
             <number>4</number>
            </property>
-           <item>
+           <item row="0" column="0">
             <widget class="ScientificDoubleSpinBox" name="data_clipping_max">
              <property name="minimum">
               <double>-9999999999.989999771118164</double>
@@ -204,7 +158,7 @@
              </property>
             </widget>
            </item>
-           <item>
+           <item row="1" column="0">
             <widget class="ScientificDoubleSpinBox" name="data_clipping_min">
              <property name="minimum">
               <double>-9999999999.989999771118164</double>
@@ -214,21 +168,119 @@
              </property>
             </widget>
            </item>
-           <item>
+           <item row="0" column="1">
+            <widget class="QCheckBox" name="use_data_clipping_max">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QCheckBox" name="use_data_clipping_min">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
             <widget class="QCheckBox" name="data_set_use_clipping">
              <property name="text">
-              <string>Use clipping</string>
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>Use clipping:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>Scale:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,0">
+           <property name="topMargin">
+            <number>4</number>
+           </property>
+           <property name="bottomMargin">
+            <number>4</number>
+           </property>
+           <item row="1" column="0">
+            <widget class="ScientificDoubleSpinBox" name="data_scale_min">
+             <property name="specialValueText">
+              <string/>
+             </property>
+             <property name="minimum">
+              <double>-9999999999.989999771118164</double>
+             </property>
+             <property name="maximum">
+              <double>9999999999.989999771118164</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Use scaling:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="ScientificDoubleSpinBox" name="data_scale_max">
+             <property name="minimum">
+              <double>-9999999999.989999771118164</double>
+             </property>
+             <property name="maximum">
+              <double>9999999999.989999771118164</double>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QCheckBox" name="use_data_scale_max">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QCheckBox" name="use_data_scale_min">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QCheckBox" name="data_set_use_scale">
+             <property name="text">
+              <string/>
              </property>
             </widget>
            </item>
           </layout>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="label_10">
+          <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Scale:</string>
+            <string>Colorbar label:</string>
            </property>
           </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="data_colorbar_label"/>
          </item>
         </layout>
        </widget>
@@ -386,11 +438,16 @@
  </customwidgets>
  <tabstops>
   <tabstop>map_title</tabstop>
+  <tabstop>data_colorbar_label</tabstop>
   <tabstop>data_scale_max</tabstop>
+  <tabstop>use_data_scale_max</tabstop>
   <tabstop>data_scale_min</tabstop>
+  <tabstop>use_data_scale_min</tabstop>
   <tabstop>data_set_use_scale</tabstop>
   <tabstop>data_clipping_max</tabstop>
+  <tabstop>use_data_clipping_max</tabstop>
   <tabstop>data_clipping_min</tabstop>
+  <tabstop>use_data_clipping_min</tabstop>
   <tabstop>data_set_use_clipping</tabstop>
   <tabstop>colormap</tabstop>
  </tabstops>
